--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+.nav{
+width: 100%;
+display:flex;
+justify-content: space-between;
+height: 71px;
+background:linear-gradient(to left,rgb(128, 128, 128),rgb(204, 218, 219),rgb(253, 251, 251));
+color:#7e7579d6; 
+}
+.card{
+    width: 220px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin:15px;
+    border-radius: 20px;
+    box-shadow: 0px 11px 26px -1px rgba(0,0,0,0.75);
+-webkit-box-shadow: 0px 11px 26px -1px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 11px 26px -1px rgba(0,0,0,0.75);
+
+}
+.card img{
+    min-width: 220px;
+    max-width: 220px;
+      min-height: 150px;
+        max-height: 150px;
+          border-radius: 20px 20px 0px 0px;
+
+}
+.box{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.vid video{
+    width: 1394px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
